Fix Navigation spacing issues

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -30,6 +30,7 @@
 .nav__section3 {
   background-color: transparent;
   padding: 5px 20px 5px 0;
+  display: flex;
 }
 
 .nav__icon {
